# training-cookbook

./: 404.html  index.html  info_tree.py  mkdocs.yml  pyproject.toml  ruff.toml  source_include.py  training_cookbook.py
.github/workflows/: ci.yml
docs/: training_cookbook.md
search/: search_index.json
training_cookbook/: index.html
