[project]
name = "info-tree"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax",
    "mkdocs-include-markdown-plugin>=7.1.5",
    "mkdocs-macros-plugin>=1.3.7",
    "mkdocs-material>=9.6.14",
    "optax>=0.2.4",
    "pdbp>=1.7.0",
]

[tool.uv.sources]
jax = { git = "https://github.com/jax-ml/jax.git" }
